--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -114,9 +114,12 @@
 		</section>
 	</div><!-- /content -->
 </div><!-- /tabs -->
-<script <script src="scripts.js"></script>
+<script src="js/CBPFWTabs.js"></script>
 <script>
 	new CBPFWTabs( document.getElementById( 'tabs' ) );
+	<script src=http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js></script>
+	<script src="scripts.js"></script>
 	</script>
+
 	</body>
 </html>
