--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -9,8 +9,9 @@
 		<meta name="keywords" content="responsive tabs, full width tabs, template, blueprint" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<!--<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.css" />-->
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -118,7 +119,7 @@
 <script>
 	new CBPFWTabs( document.getElementById( 'tabs' ) );
 	<script src=http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js></script>
-	<script src="scripts.js"></script>
+	<script src="js/scripts.js"></script>
 	</script>
 
 	</body>
