--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -8,8 +8,9 @@
 		<meta name="description" content="Blueprint: Nested Accordion" />
 		<meta name="keywords" content="nested, accordion, simple, vertical, web development, css3, javascript" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
+		<!--<link rel="shortcut icon" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="css/default.css" />-->
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 
 
