--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -11,6 +11,7 @@
 		<!--<link rel="shortcut icon" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<link rel="stylesheet" type="text/css" href="css/default.css" />-->
+		<link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
 
