--- a/NestedAccordion/index.html
+++ b/NestedAccordion/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css" />-->
 		<link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css' />
 
 
 			<div class="main">
