--- a/ViewModeSwitch/index.html
+++ b/ViewModeSwitch/index.html
@@ -9,14 +9,16 @@
 		<meta name="keywords" content="view mode, switch, css, style, grid, list, template" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
+		<link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css' />
 		<!--<link rel="stylesheet" type="text/css" href="css/default.css" />-->
 		<!--<link rel="stylesheet" type="text/css" href="css/component.css" />-->
 		<!--<script src="js/modernizr.custom.js"></script>-->
 	</head>
 	<body>
 		<div class="container">
-			<header class="clearfix">
+			<!--<header class="clearfix">
 				<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
 				<h1>View Mode Switch</h1>
 				<nav>
@@ -25,7 +27,7 @@
 					<a href="http://tympanus.net/codrops/?p=15656" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
 					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
 				</nav>
-			</header>
+			</header>-->
 			<div class="main">
 				<div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
 					<div class="cbp-vm-options">
@@ -147,6 +149,9 @@
 		</div><!-- /container -->
 		<!--<script src="js/classie.js"></script>
 		<script src="js/cbpViewModeSwitch.js"></script>-->
+		<script src="bower_components/modernizr/modernizr.js"></script>
+		<script src="bower_components/lodash/lodash.min.js"></script>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
