Add moderinzr, normalize, jquery

--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -8,7 +8,7 @@
   <title>Blueprint: Responsive Full Width Tabs</title>
   <meta name="description" content="Blueprint: Responsive Full Width Tabs" />
   <meta name="keywords" content="responsive tabs, full width tabs, template, blueprint" />
-  
+  <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -136,6 +136,7 @@
     <!-- /content -->
   </div>
   <!-- /tabs -->
+  <script src="bower_components/modernizr/modernizr.js"></script>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src=http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js></script>
   <script src="js/scripts.js"></script>
