--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -8,7 +8,7 @@
   <title>Blueprint: Responsive Full Width Tabs</title>
   <meta name="description" content="Blueprint: Responsive Full Width Tabs" />
   <meta name="keywords" content="responsive tabs, full width tabs, template, blueprint" />
-  <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
+  <!--<link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />-->
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,7 +19,7 @@
   <div id="tabs" class="tabs">
     <nav>
       <ul>
-        <li>
+        <li class="tab-current">
           <a href="#section-1" class="icon-shop">
             <span>Shop</span>
           </a>
@@ -136,9 +136,9 @@
     <!-- /content -->
   </div>
   <!-- /tabs -->
-  <script src="bower_components/modernizr/modernizr.js"></script>
-		<script src="bower_components/lodash/lodash.min.js"></script>
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <!--<script src="bower_components/modernizr/modernizr.js"></script>-->
+  <!--<script src="bower_components/lodash/lodash.min.js"></script>-->
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
