--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -19,7 +19,7 @@
   <div id="tabs" class="tabs">
     <nav>
       <ul>
-        <li class="tab-current">
+        <li>
           <a href="#section-1" class="icon-shop">
             <span>Shop</span>
           </a>
@@ -47,7 +47,7 @@
       </ul>
     </nav>
     <div class="content">
-      <section id="section-1">
+      <section id="section-1" class="content-current">
         <div class="mediabox">
           <img src="img/01.png" alt="img01" />
           <h3>Sushi Gumbo Beetroot</h3>
