--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -19,7 +19,7 @@
   <div id="tabs" class="tabs">
     <nav>
       <ul>
-        <li>
+        <li class="tab-current">
           <a href="#section-1" class="icon-shop">
             <span>Shop</span>
           </a>
