--- a/MultiColumnForm/index.html
+++ b/MultiColumnForm/index.html
@@ -19,38 +19,45 @@
   <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<style>
+  <style>
+    body {
+      background-color: cornflowerblue;
+      font-family: Calibri, Arial, sans-serif;
 
-body {
-  background-color: cornflowerblue;
-  font-family: Calibri, Arial, sans-serif;
-}
+    }
 
-input {
-  background-color: cornflowerblue;
-}
+    input {
+      background-color: cornflowerblue;
+      border: 1px solid white;
 
-label {
-  color: white;
-}
+    }
 
-</style>
+    label {
+      color: white;
+      margin: 2em; padding: 2em;
+      display: inline-block;
 
-  <form>
-    <div>
-      <label for="first name">FIRST NAME</label>
-      <input type="text" id="first name" />
-    </div>
-    <div>
-      <label for="last name">LAST NAME</label>
-      <input type="text" id="last name" />
-    </div>
-    <div>
-      <label for="email">EMAIL ADDRESS</label>
-      <input type="text" id="email" />
-    </div>
 
-  </form>
+    }
+  </style>
+
+  <main class="form">
+    <form>
+      <div>
+        <label for="first name">FIRST NAME</label>
+        <input type="text" id="first name" />
+      </div>
+      <div>
+        <label for="last name">LAST NAME</label>
+        <input type="text" id="last name" />
+      </div>
+      <div>
+        <label for="email">EMAIL ADDRESS</label>
+        <input type="text" id="email" />
+      </div>
+
+    </form>
+  </main>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>
