feature/FullWidthTabs/display-tabs
Display active and inactive tabs!

--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -21,11 +21,21 @@
     <div id="tabs" class="tabs">
       <nav>
         <ul>
-          <li>Shop</li>
-          <li>Drinks</li>
-          <li>Food</li>
-          <li>Lab</li>
-          <li>Order</li>
+          <li class="tab-current">
+            <a id="tab-1" class="shop">Shop</a>
+          </li>
+          <li>
+            <a id="tab-2" class="drinks">Drinks</a>
+          </li>
+          <li>
+            <a id="tab-3" class="food">Food</a>
+          </li>
+          <li>
+            <a id="tab-4" class="lab">Lab</a>
+          </li>
+          <li>
+            <a id="tab-5" class="order">Order</a>
+          </li>
         </ul>
       </nav>
     </div>
