--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -20,127 +20,97 @@
   <div class="content">
       <section id="tab-1" class="content-current">
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
           <h3>Hamburgers</h3>
           <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan. Cras lacinia rutrum risus, id viverra metus dictum sit amet. Fusce venenatis, urna eget cursus placerat, dui nisl fringilla purus, nec tincidunt sapien justo ut nisl. Curabitur lobortis semper
-            neque et varius. Etiam eget lectus risus, a varius orci. Nam placerat mauris at dolor imperdiet at aliquet lectus ultricies. Duis tincidunt mi at quam condimentum lobortis.</p>
+            rutrum. Sed ac neque ut neque dictum accumsan.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
           <h3>Baby back ribs</h3>
           <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos. Lectus quis elit blandit fringilla a ut turpis praesent felis. What do you mean "brought it bowling"? I didn't rent it shoes. I'm not buying it a fucking beer. He's not gonna take your fucking
-            turn, Dude. Ligula, malesuada suscipit malesuada.</p>
+            ac magna justo pellentesque ac. Shomer shabbos.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
           <h3>Hot dogs</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you. If I drive for you, you get
-            your money. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. Anything happens in that five minutes and I'm yours. My character seems to think that he is, so he would define it.</p>
+          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
         </div>
       </section>
       <section id="tab-2">
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
           <h3>Chicken tenders</h3>
           <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan. Cras lacinia rutrum risus, id viverra metus dictum sit amet. Fusce venenatis, urna eget cursus placerat, dui nisl fringilla purus, nec tincidunt sapien justo ut nisl. Curabitur lobortis semper
-            neque et varius. Etiam eget lectus risus, a varius orci. Nam placerat mauris at dolor imperdiet at aliquet lectus ultricies. Duis tincidunt mi at quam condimentum lobortis.</p>
+            rutrum. Sed ac neque ut neque dictum accumsan.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
           <h3>Cheese pizza</h3>
           <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos. Lectus quis elit blandit fringilla a ut turpis praesent felis. What do you mean "brought it bowling"? I didn't rent it shoes. I'm not buying it a fucking beer. He's not gonna take your fucking
-            turn, Dude. Ligula, malesuada suscipit malesuada.</p>
+            ac magna justo pellentesque ac. Shomer shabbos.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
           <h3>Brownies</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you. If I drive for you, you get
-            your money. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. Anything happens in that five minutes and I'm yours. My character seems to think that he is, so he would define it.</p>
+          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
         </div>
       </section>
       <section id="tab-3">
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
           <h3>Ice cream cone</h3>
           <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan. Cras lacinia rutrum risus, id viverra metus dictum sit amet. Fusce venenatis, urna eget cursus placerat, dui nisl fringilla purus, nec tincidunt sapien justo ut nisl. Curabitur lobortis semper
-            neque et varius. Etiam eget lectus risus, a varius orci. Nam placerat mauris at dolor imperdiet at aliquet lectus ultricies. Duis tincidunt mi at quam condimentum lobortis.</p>
+            rutrum. Sed ac neque ut neque dictum accumsan.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
           <h3>Candy bar</h3>
           <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos. Lectus quis elit blandit fringilla a ut turpis praesent felis. What do you mean "brought it bowling"? I didn't rent it shoes. I'm not buying it a fucking beer. He's not gonna take your fucking
-            turn, Dude. Ligula, malesuada suscipit malesuada.</p>
+            ac magna justo pellentesque ac. Shomer shabbos.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
           <h3>Donut</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you. If I drive for you, you get
-            your money. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. Anything happens in that five minutes and I'm yours. My character seems to think that he is, so he would define it.</p>
+          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
         </div>
       </section>
       <section id="tab-4">
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
           <h3>Milk shakes</h3>
           <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan. Cras lacinia rutrum risus, id viverra metus dictum sit amet. Fusce venenatis, urna eget cursus placerat, dui nisl fringilla purus, nec tincidunt sapien justo ut nisl. Curabitur lobortis semper
-            neque et varius. Etiam eget lectus risus, a varius orci. Nam placerat mauris at dolor imperdiet at aliquet lectus ultricies. Duis tincidunt mi at quam condimentum lobortis.</p>
+            rutrum. Sed ac neque ut neque dictum accumsan.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
           <h3>Fish sticks</h3>
           <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos. Lectus quis elit blandit fringilla a ut turpis praesent felis. What do you mean "brought it bowling"? I didn't rent it shoes. I'm not buying it a fucking beer. He's not gonna take your fucking
-            turn, Dude. Ligula, malesuada suscipit malesuada.</p>
+            ac magna justo pellentesque ac. Shomer shabbos.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
           <h3>Chicken wings</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you. If I drive for you, you get
-            your money. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. Anything happens in that five minutes and I'm yours. My character seems to think that he is, so he would define it.</p>
+          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
         </div>
       </section>
       <section id="tab-5">
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
           <h3>Tator tots</h3>
           <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan. Cras lacinia rutrum risus, id viverra metus dictum sit amet. Fusce venenatis, urna eget cursus placerat, dui nisl fringilla purus, nec tincidunt sapien justo ut nisl. Curabitur lobortis semper
-            neque et varius. Etiam eget lectus risus, a varius orci. Nam placerat mauris at dolor imperdiet at aliquet lectus ultricies. Duis tincidunt mi at quam condimentum lobortis.</p>
+            rutrum. Sed ac neque ut neque dictum accumsan.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
           <h3>French fries</h3>
           <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos. Lectus quis elit blandit fringilla a ut turpis praesent felis. What do you mean "brought it bowling"? I didn't rent it shoes. I'm not buying it a fucking beer. He's not gonna take your fucking
-            turn, Dude. Ligula, malesuada suscipit malesuada.</p>
+            ac magna justo pellentesque ac. Shomer shabbos.</p>
         </div>
         <div class="column">
-          <img>
-          <!-- Insert image here -->
+          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
           <h3>Potato skins</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you. If I drive for you, you get
-            your money. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. Anything happens in that five minutes and I'm yours. My character seems to think that he is, so he would define it.</p>
+          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
         </div>
       </section>
     </div>
