Fixed tab feature after merge conflict created code error

--- a/FullWidthTabs/index.html
+++ b/FullWidthTabs/index.html
@@ -17,103 +17,126 @@
 </head>
 
 <body>
-  <div class="content">
-      <section id="tab-1" class="content-current">
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
-          <h3>Hamburgers</h3>
-          <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
-          <h3>Baby back ribs</h3>
-          <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
-          <h3>Hot dogs</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
-        </div>
-      </section>
-      <section id="tab-2">
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
-          <h3>Chicken tenders</h3>
-          <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
-          <h3>Cheese pizza</h3>
-          <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
-          <h3>Brownies</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
-        </div>
-      </section>
-      <section id="tab-3">
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
-          <h3>Ice cream cone</h3>
-          <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
-          <h3>Candy bar</h3>
-          <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
-          <h3>Donut</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
-        </div>
-      </section>
-      <section id="tab-4">
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
-          <h3>Milk shakes</h3>
-          <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
-          <h3>Fish sticks</h3>
-          <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
-          <h3>Chicken wings</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
-        </div>
-      </section>
-      <section id="tab-5">
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/" alt="sports">
-          <h3>Tator tots</h3>
-          <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
-            rutrum. Sed ac neque ut neque dictum accumsan.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
-          <h3>French fries</h3>
-          <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
-            ac magna justo pellentesque ac. Shomer shabbos.</p>
-        </div>
-        <div class="column">
-          <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
-          <h3>Potato skins</h3>
-          <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
-        </div>
-      </section>
+  <div class="container">
+    <div id="tabs" class="tabs">
+      <nav>
+        <ul>
+          <li class="tab-current">
+            <a id="tab-1" class="shop">Shop</a>
+          </li>
+          <li>
+            <a id="tab-2" class="drinks">Drinks</a>
+          </li>
+          <li>
+            <a id="tab-3" class="food">Food</a>
+          </li>
+          <li>
+            <a id="tab-4" class="lab">Lab</a>
+          </li>
+          <li>
+            <a id="tab-5" class="order">Order</a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </div>
+  <div class="content">
+    <section id="tab-1" class="content-current">
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/" alt="sports">
+        <h3>Hamburgers</h3>
+        <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
+          rutrum. Sed ac neque ut neque dictum accumsan.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
+        <h3>Baby back ribs</h3>
+        <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
+          ac magna justo pellentesque ac. Shomer shabbos.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
+        <h3>Hot dogs</h3>
+        <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
+      </div>
+    </section>
+    <section id="tab-2">
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/" alt="sports">
+        <h3>Chicken tenders</h3>
+        <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
+          rutrum. Sed ac neque ut neque dictum accumsan.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
+        <h3>Cheese pizza</h3>
+        <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
+          ac magna justo pellentesque ac. Shomer shabbos.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
+        <h3>Brownies</h3>
+        <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
+      </div>
+    </section>
+    <section id="tab-3">
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/" alt="sports">
+        <h3>Ice cream cone</h3>
+        <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
+          rutrum. Sed ac neque ut neque dictum accumsan.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
+        <h3>Candy bar</h3>
+        <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
+          ac magna justo pellentesque ac. Shomer shabbos.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
+        <h3>Donut</h3>
+        <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
+      </div>
+    </section>
+    <section id="tab-4">
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/" alt="sports">
+        <h3>Milk shakes</h3>
+        <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
+          rutrum. Sed ac neque ut neque dictum accumsan.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
+        <h3>Fish sticks</h3>
+        <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
+          ac magna justo pellentesque ac. Shomer shabbos.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
+        <h3>Chicken wings</h3>
+        <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
+      </div>
+    </section>
+    <section id="tab-5">
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/" alt="sports">
+        <h3>Tator tots</h3>
+        <p>Maecenas eu placerat ante. Fusce ut neque justo, et aliquet enim. In hac habitasse platea dictumst. Nullam commodo neque erat, vitae facilisis erat. Cras at mauris ut tortor vestibulum fringilla vel sed metus. Donec interdum purus a justo feugiat
+          rutrum. Sed ac neque ut neque dictum accumsan.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/1/" alt="sports">
+        <h3>French fries</h3>
+        <p>Lebowski ipsum a MILLION BUCKS FROM FUCKING NEEDY LITTLE URBAN ACHIEVERS! YOU ARE SCUM, MAN! Dolor sit amet, consectetur adipiscing elit. Yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Praesent
+          ac magna justo pellentesque ac. Shomer shabbos.</p>
+      </div>
+      <div class="column">
+        <img src="http://lorempixel.com/400/200/sports/2/" alt="sports">
+        <h3>Potato skins</h3>
+        <p>Do you understand? I don't carry a gun. Hey girl, I brought home a few bottles of wine since I know you needed more corks for that pinterest project. You just tell me what you want, and I'm gonna be that for you.</p>
+      </div>
+    </section>
+  </div>
   <!-- End of container class -->
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="js/vendor/jquery-1.11.2.min.js"></script>
